  log time.

* The routine for generating initial values in flexsurvspline has been
  improved.  This now obeys the constraint that the log cumulative
  hazard is increasing, thus avoiding errors from optim() when this
  wasn't satisfied.  Cox regression is used as a fallback to
  initialise covariate effects if this fails.

* As a result, flexsurv now depends on the "quadprog" package.

* New "logliki" component in model objects, containing vector of
  log-likelihoods for each observation at the estimated or fixed
  parameters.

* Fix of bug that prevented plots being drawn by categorical
  covariates by default.

* Fix of bugs with spline models and no data censored, or all data
  interval censored.

* Option to summary.flexsurvreg to return a tidy data frame.


Version 0.6 (2015-04-13) 
-----------

* CRAN release.  Also includes the changes from Version 0.5.1. 

* Full support for multi-state models fitted as a list of
  independent transition-specific models.

* New function pars.fmsm to return transition-specific parameters in
  multi-state models.

* Bug fix for empirical hazard plots with categorical covariates.
  Thanks to Milan Bouchet-Valat.


Version 0.5.1 (2015-02-24)
-------------

* github-only release.

* Log-logistic distribution built in to flexsurvreg, and distribution
  functions provided.

* Bug fix in tcovs option in semi-Markov model simulation.

* "digits" argument supported by default model print function.  This
  is passed to "format" to format the parameter estimates, and
  defaults to 3.

* Bug fix in "events" printed output for interval censored
  data. Thanks to Sabrina Russo.

* pgompertz returns Inf for q=Inf, even for parameters denoting
  "living forever", since the CDF is P(X <= q) not P(X < q).  This
  affected some fits of the Gompertz distribution.


Version 0.5 (2014-09-22)
-----------

* Major new release, so version number bumped from 0.3 to 0.5.

* New package vignettes: a user guide and a vignette of examples.
