@@ -34,6 +34,12 @@ hsurvspline,
 Hsurvspline,
 hweibull,    
 Hweibull,    
+dweibullPH,    
+pweibullPH,    
+qweibullPH,    
+rweibullPH,    
+hweibullPH,    
+HweibullPH,    
 lines.flexsurvreg,
 msfit.flexsurvreg,    
 normboot.flexsurvreg,
